# kydas_driver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  package.xml
examples/: diffRobot.cpp
include/kydas_driver/: kydas_driver.h
msg/: MotorControllerStatus.msg  MotorCurrent.msg  MotorEletricAngle.msg  MotorFaultCode.msg  MotorPosition.msg  MotorProgramVersion.msg  MotorRotorPosition.msg  MotorSpeed.msg  MotorTemp.msg  MotorVoltage.msg
src/: kydas_driver.cpp  kydas_driver_interface.cpp  kydas_driver_node.cpp  kydas_driver_reading_serial.cpp  kydas_driver_ros_callbacks.cpp  kydas_driver_sending_to_serial.cpp  rs232.c
srv/: DisableMotor.srv  RequestQueryData.srv  SetSpeed.srv  SetTorque.srv
